src/snapshots/ktype__view__tests__typing_screen_snapshot.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  [time] words   [15]  30  60  ·  15s   [tab] restart                       
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
[esc] quit
