src/snapshots/ktype__view__tests__typing_screen_waiting_snapshot.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  [time] words   [15]  30  60   [←→] cycle  [tab] restart  [shift+tab] → wor
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
[esc] quit
