src/snapshots/ktype__view__tests__words_mode_running.snap
---
source: src/view.rs
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
1/4                                                                             
                                                                                
the quick brown fox
