src/snapshots/ktype__view__tests__words_mode_waiting.snap
---
source: src/view.rs
assertion_line: 504
expression: output
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
kern  time [words]   10  [25]  50  100   [←→] cycle  [tab] restart  [shift+tab] 
                                                                                
the quick brown fox                                                             
                                                                                
                                                                                
                                                                                
[esc] quit
